Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 4.7.0
-
None
-
Windows 7 Ultimate
Description
When the ClangCodeModel plugin is enabled, the renaming (Right Click->Refactor->Rename Symbol Under Cursor) does not work correctly, as you can see on the picture below:
On the contrary, this refactoring works when the ClangCodeModel plugin is disabled.
Attachments
For Gerrit Dashboard: QTCREATORBUG-20966 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
237359,4 | Clang: Fix local references for operator arguments | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |